--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
-    "vue-country-flag": "^2.0.2"
+    "vue-country-flag": "^2.0.2",
+    "vue-flag-icon": "^1.0.6"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
